async-zero-cost-templating/tests/ui/compile_fail/if_else_fail.rs
use async_zero_cost_templating::html;

pub fn main() {
    html! {
        if condition {
            <button class="submit-link" type="submit"></button>
        }
    }
}
